Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50866

QTabBar scroll buttons overlap tabs

XMLWordPrintable

    • macOS
    • 0965cf0f1e49185097b0698e51ea9ad464eaa573 (qt/qtbase/dev) 6f4f50b98bed5485b02721d7f3b82cb94ac07690 (qt/qtbase/6.2) 460ad31c7a1cd88b843b654fb23ffc7e01dc52e4 (qt/qtbase/6.1)

      QTabBar scroll buttons overlap tabs.

      Please use this custom tab dialog example to reproduce this issue.

      https://github.com/shinichy/tabdialog_example

        1. QTabBar_scroll_buttons_overlap.png
          QTabBar_scroll_buttons_overlap.png
          147 kB
        2. TabArrowsOverlappingTab.png
          TabArrowsOverlappingTab.png
          36 kB
        3. tabWidgetArrows.zip
          3 kB
        4. OneRightArrowClick.png
          OneRightArrowClick.png
          36 kB
        5. Screenshot_1.png
          Screenshot_1.png
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            shinichy Shinichi Katayama
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: