QTabBar: don't let tab shine through (semi-transparent) scroll buttons

On styles where the tab bar's scroll buttons are rendered semi-
transparently, or where the buttons don't fill their entire rect (for
example have rounded edges), the tab that's covered by the buttons
should not shine through the gaps, or even shine through the button.

Clip the painter so that the area of each button is not painted by the
tabs.

Fixes: QTBUG-50866
Change-Id: Ie81f6d260f36d5a17868822e683745844a6a6b2f
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 0965cf0f1e49185097b0698e51ea9ad464eaa573)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>